fix: Video loading animation play button on mobile screen

--- a/assets/src/css/godam-player.scss
+++ b/assets/src/css/godam-player.scss
@@ -149,8 +149,8 @@
 		}
 
 		@container godam-player-default-skin (max-width: 480px) {
-			width: 50px;
-			height: 30px;
+			width: 40px;
+			height: 40px;
 
 			svg {
 				width: 20px;
